--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,22 @@
 name: devleomobile
 description: A project to demonstrate various applications developed in Flutter.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
-  path_provider: ^2.0.2
+  flutter_share: ^2.0.0
+  http: ^0.13.6
+  path_provider: ^2.0.15
   share: ^2.0.4
-  transparent_image: ^2.0.0
-  http: ^0.13.3
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -26,8 +27,7 @@ flutter:
   assets:
     - imgs/fundo.jpg
     - imgs/camisaVasco.jpg
-
- # example:
+  # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
